--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.0.1",
+    "antd": "^5.2.1",
     "gatsby": "^5.6.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
